feat : finish all the tests for the model module done
feat : synchronize the data from the pointer and the data from the app so that we won't have to refresh the app, to make new workhour appeared after a checkin... done

Bug fix : change of port not supported when check in/out with old port (old port should have been replaced for the workhour not sended yet) done
Bug fix : synchronize of add new Employee not done yet... done